--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -11,7 +11,7 @@ Traffic Type: @Model.TrafficTypes
 <br />
 Vertical: @Model.Vertical
 <br />
-Link:<a href="@Model.OfferLink">@Model.OfferLink</a>
+Link:<a href="@Model.Link">@Model.Link</a>
 <br />
 Payout: @Model.CostCurrency@Model.Cost
 <br />
