--- a/1/EomTool/EomToolWeb/Views/Campaigns/Items.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Items.cshtml
@@ -118,8 +118,16 @@
             }
         });
 
+@{
+    string filter = "?x=1";
+    if (Model.Pid != null) { filter += "&pid=" + Model.Pid; }
+    if (Model.Country != null) { filter += "&country=" + Model.Country.CountryCode; }
+    if (Model.SearchString != null) { filter += "&searchstring=" + Model.SearchString; }
+    if (Model.Vertical != null) { filter += "&vertical=" + Model.Vertical.Name; }
+    if (Model.TrafficType != null) { filter += "&traffictype=" + Model.TrafficType.Name; }
+}
         $(document).bind("TemplateLoaded", function(e, path) { 
-            DisplayCampaigns("@Url.Content("~/api/campaignsapi")"); 
+            DisplayCampaigns("@Url.Content("~/api/campaignsapi")@(new HtmlString(filter))"); 
         });
         loader.loadTemplate("@Url.Content("~/Templates/Campaigns/_List.tmpl.htm")");
     });
