--- a/1/EomTool/EomToolWeb/Views/Campaigns/Items.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Items.cshtml
@@ -14,112 +14,88 @@
 
     var dataSource = null;
     var kendoListView = null;
+    var theDataUrl = "";
 
-    function DisplayCampaigns(dataUrl) {
-
-        //--------------------------------------
-        // Campaigns DataSource
-        //--------------------------------------
-        dataSource = new kendo.data.DataSource({
-            transport: {
-                read: {
-                    url: dataUrl,
-                    dataType: "json"
-                },
-                update: {
-                    url: "@Url.Action("Edit2", "Campaigns")",
-                    type: "POST"
-                }
-            },
-            pageSize: 20,
-            schema: {
-                model: {
-                    id: "Pid",
-                    fields: {
-                        Pid: { editable: false },
-                        AdManagers: { editable: false },
-                        AccountManagers: { editable: false },
-                        Countries: { editable: false },
-                        TrafficTypes: { editable: false }
+    function DisplayCampaigns(dataUrl) {  
+        theDataUrl = dataUrl;
+        if(dataSource == null)
+        {
+            //--------------------------------------
+            // Campaigns DataSource
+            //--------------------------------------
+            dataSource = new kendo.data.DataSource({
+                transport: {
+                    read: function(options) {
+                        $.ajax( {
+                            url: theDataUrl,
+                            data: options.data,
+                            success: function(result) {
+                                options.success(result);
+                            }
+                        });
+                    },
+                    update: {
+                        url: "@Url.Action("Edit2", "Campaigns")",
+                        type: "POST"
                     }
-                }
-            }
-        });
+                },
+                pageSize: 20,
+                schema: {
+                    model: {
+                        id: "Pid",
+                        fields: {
+                            Pid: { editable: false },
+                            AdManagers: { editable: false },
+                            AccountManagers: { editable: false },
+                            Countries: { editable: false },
+                            TrafficTypes: { editable: false }
+                        }
+                    }
+                },
+                autoBind: false
+            });
 
-        //--------------------------------------
-        // Campaigns ListView
-        //--------------------------------------
-        kendoListView = $("#listView").kendoListView({
-            dataSource: dataSource,
-            template: kendo.template($("#listTemplate").html()),
-            editTemplate: kendo.template($("#editTemplate").html()),
-//            autoBind: false,
-            dataBound: function () {
-                // Once list items are created, setup 
-                // Edit link to be visible on hover.
-                $("#listView .listitem").hover(
-                    function () { $(this).find("a.editlink").first().show(); },
-                    function () { $(this).find("a.editlink").first().hide(); }
-                );                    
-            }
-        });
-//        dataSource.read();
+            //--------------------------------------
+            // Campaigns ListView
+            //--------------------------------------
+            kendoListView = $("#listView").kendoListView({
+                dataSource: dataSource,
+                template: kendo.template($("#listTemplate").html()),
+                editTemplate: kendo.template($("#editTemplate").html()),
+                dataBound: function () {                 
+                },
+                edit: function(e) {
+                    e.item.animate({ height: '540px', width: '800px' }, 1000 );
+                }
+            });
                 
-        //--------------------------------------
-        // Top Pager
-        //--------------------------------------
-        $("#CampaignListPagerTop").kendoPager({
-            dataSource: dataSource
-        });
+            //--------------------------------------
+            // Top Pager
+            //--------------------------------------
+            $("#CampaignListPagerTop").kendoPager({
+                dataSource: dataSource
+            });
 
-        //--------------------------------------
-        // Bottom Pager
-        //--------------------------------------              
-        $("#CampaignListPagerBottom").kendoPager({
-            dataSource: dataSource
-        });
+            //--------------------------------------
+            // Bottom Pager
+            //--------------------------------------              
+            $("#CampaignListPagerBottom").kendoPager({
+                dataSource: dataSource
+            });
+        }
+        dataSource.read();
     }
 
-    function EditCampaign(pid) {
-        var c = dataSource.get(pid);
-        //c.Name = "testme";
-        kendoListView.edit();
-        //kendoListView.refresh();
-
-//        $.get('@Url.Action("Edit", "Campaigns")', { pid: pid }, function (data) {
-//            $('#divEditCampaignInner').html(data);
-//            $('#divEditCampaign').dialog("open");
-//        });
-    }
-
-    function SaveCampaign() {
-        var url = '@Url.Action("Edit", "Campaigns")';
-        $.post(url, $('#frmEditCampaign').serialize(), function (data) {
-            var pid = $('#frmEditCampaign #Pid').val();
-            // TODO: ReloadCampaign(pid);
-            $('#listView div.EditCampaign').dialog("close");
-        });
-    }
-
+@{
+    string currFilter = "";
+    currFilter += "&country=" + Model.CountryFilterString;
+    currFilter += "&search=" + Model.SearchString;
+    currFilter += "&vertical=";
+    currFilter += "&traffictype=";
+}
     $(document).ready(function () {
-        //--------------------------------------
-        // Edit Dialog
-        //--------------------------------------   
-        $("#divEditCampaign").dialog({
-            autoOpen: false,
-            height: 800,
-            width: 600,
-            modal: true,
-            buttons: {
-                Save: SaveCampaign,
-                Cancel: function () {
-                    $(this).dialog("close");
-                }
-            }
-        });
-
         $(document).bind("TemplateLoaded", function(e, path) { 
-            DisplayCampaigns("@Url.Content("~/api/campaignsapi")"); 
+            DisplayCampaigns("@Url.Content("~/api/campaignsapi?")" + '@(new HtmlString(currFilter))');
         });
         loader.loadTemplate("@Url.Content("~/Templates/Campaigns/_List.tmpl.htm")");
     });
