--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -23,19 +23,23 @@
     </style>
 </head>
 <body>
-    <div style="position: fixed; top: 0; width: 100%; height: 41px; z-index: 500">
+    <div style="position: fixed; top: 0; width: 100%; height: 41px; z-index: 500;">
         <ul id="menu" style="text-align: left; margin-bottom: 0;">
             <li id="@(ViewBag.MenuItem == "ByCountry" ? "selitem" : "")">@Html.ActionLink("By Country", "ListByCountry", "Campaigns", new { style = "" })</li>
-            <li id="@(ViewBag.MenuItem == "US" ? "selitem" : "")">@Html.ActionLink("US", "List", "Campaigns", new { country = "US" }, null)</li>
-            <li id="@(ViewBag.MenuItem == "CPM" ? "selitem" : "")">@Html.ActionLink("CPM", "List", "Campaigns", new { searchstring = "CPM" }, null)</li>
-            <li id="@(ViewBag.MenuItem == "All" ? "selitem" : "")">@Html.ActionLink("All", "List", "Campaigns")</li>
+            <li id="@(ViewBag.MenuItem == "US" ? "selitem" : "")">@Html.ActionLink("US", "List2", "Campaigns", new { country = "US" }, null)</li>
+            <li id="@(ViewBag.MenuItem == "CPM" ? "selitem" : "")">@Html.ActionLink("CPM", "List2", "Campaigns", new { search = "CPM" }, null)</li>
+            <li id="@(ViewBag.MenuItem == "All" ? "selitem" : "")">@Html.ActionLink("All", "List2", "Campaigns")</li>
             <li><span id="@(ViewBag.MenuItem == "Top" ? "parentselitem" : "")">Top</span>
                 <ul>
                     <li>@Html.ActionLink("Revenue", "Top", "Campaigns", new { by = "Revenue" }, null)</li>
                     <li>@Html.ActionLink("Cost", "Top", "Campaigns", new { by = "Cost" }, null)</li>
                 </ul>
             </li>
-            <li id="@(ViewBag.MenuItem == "Search" ? "selitem" : "")">@Html.ActionLink("Search", "Search", "Campaigns")</li>
+            <li style="border-right: 0px">
+                <div style="background: url(@Url.Content("~/Images/bg-search-bar2.png")); background-repeat: no-repeat; width: 226px; margin-left: 10px; margin-top: 4px; height: 37px;">
+                    <input id="inputSearch" style="width: 185px; height: 22px; border: none; margin: 5px 0px 0px 20px; padding: 0; background: transparent; font-size: .8em; outline: none;" id="SearchText" />
+                </div>
+            </li>
         </ul>
     </div>
     <div id="body" style="position: absolute; top: 42px; overflow: auto">
@@ -54,7 +58,21 @@
                         revert: true,
                         revertDuration: 100,
                         opacity: 0.35,
-                        containment: 'html' 
+                        containment: 'html'
+                    });
+                }
+            });     
+            $('#inputSearch').bind('keypress', function (event) {
+                var a = $('#inputSearch').val() + String.fromCharCode(event.which);
+                if (event.keyCode === 13) {
+                    ChangeFilter();
+                }
+                else {
+                    $.doTimeout(1000, function () {
+                        var b = $('#inputSearch').val();
+                        if (a == b) {
+                            ChangeFilter();
+                        }
                     });
                 }
             });
