hide search on pages that don't have list view

--- a/1/EomTool/EomToolWeb/Views/Campaigns/Top.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Top.cshtml
@@ -2,7 +2,8 @@
 
 @{
     ViewBag.Title = "TopTenRevenue";
-    ViewBag.MenuItem = "Top";    
+    ViewBag.MenuItem = "Top";
+    ViewBag.NoSearch = true;
     Layout = "~/Views/Shared/_LayoutCampaignWiki.cshtml";
 }
 <div style="margin-left: 30px">
