--- a/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/ListByCountry.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Campaigns By Country";
     ViewBag.MenuItem = "ByCountry";
+    ViewBag.NoSearch = true;
     Layout = "~/Views/Shared/_LayoutCampaignWiki.cshtml";
 }
 
