--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -35,11 +35,14 @@
                     <li>@Html.ActionLink("Cost", "Top", "Campaigns", new { by = "Cost" }, null)</li>
                 </ul>
             </li>
+            @if (ViewBag.NoSearch == null || !ViewBag.NoSearch)
+            {
             <li style="border-right: 0px">
                 <div style="background: url(@Url.Content("~/Images/bg-search-bar2.png")); background-repeat: no-repeat; width: 226px; margin-left: 10px; margin-top: 4px; height: 37px;">
                     <input id="inputSearch" style="width: 185px; height: 22px; border: none; margin: 5px 0px 0px 20px; padding: 0; background: transparent; font-size: .8em; outline: none;" id="SearchText" />
                 </div>
             </li>
+            }
         </ul>
     </div>
     <div id="body" style="position: absolute; top: 42px; overflow: auto">
