--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -34,6 +34,7 @@
                 <ul>
                     <li>@Html.ActionLink("Revenue", "Top", "Campaigns", new { by = "Revenue" }, null)</li>
                     <li>@Html.ActionLink("Cost", "Top", "Campaigns", new { by = "Cost" }, null)</li>
+                    <li>@Html.ActionLink("EPC", "Top", "Campaigns", new { by = "EPC" }, null)</li>
                 </ul>
             </li>
             @if (ViewBag.NoSearch == null || !ViewBag.NoSearch)
