--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -41,7 +41,7 @@
             {
             <li style="border-right: 0px">
                 <div style="background: url(@Url.Content("~/Images/bg-search-bar2.png")); background-repeat: no-repeat; width: 226px; margin-left: 10px; margin-top: 4px; height: 37px;">
-                    <input id="inputSearch" style="width: 185px; height: 22px; border: none; margin: 5px 0px 0px 20px; padding: 0; background: transparent; font-size: .8em; outline: none;" id="SearchText" />
+                    <input id="inputSearch" value="@ViewBag.SearchString" style="width: 185px; height: 22px; border: none; margin: 5px 0px 0px 20px; padding: 0; background: transparent; font-size: .8em; outline: none;" />
                 </div>
             </li>
             }
@@ -74,13 +74,13 @@
             $('#inputSearch').bind('keypress', function (event) {
                 var a = $('#inputSearch').val() + String.fromCharCode(event.which);
                 if (event.keyCode === 13) {
-                    ChangeFilter();
+                    ChangeFilter(false, true);
                 }
                 else {
                     $.doTimeout(1000, function () {
                         var b = $('#inputSearch').val();
                         if (a == b) {
-                            ChangeFilter();
+                            ChangeFilter(false, true);
                         }
                     });
                 }
