--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -26,15 +26,15 @@
 <body>
     <div style="position: fixed; top: 0; width: 100%; height: 41px; z-index: 500;">
         <ul id="menu" style="text-align: left; margin-bottom: 0;">
-            <li id="@(ViewBag.MenuItem == "ByCountry" ? "selitem" : "")">@Html.ActionLink("By Country", "ListByCountry", "Campaigns", new { style = "" })</li>
-            <li id="@(ViewBag.MenuItem == "US" ? "selitem" : "")">@Html.ActionLink("US", "List2", "Campaigns", new { country = "US" }, null)</li>
-            <li id="@(ViewBag.MenuItem == "CPM" ? "selitem" : "")">@Html.ActionLink("CPM", "List2", "Campaigns", new { search = "CPM" }, null)</li>
-            <li id="@(ViewBag.MenuItem == "All" ? "selitem" : "")">@Html.ActionLink("All", "List2", "Campaigns")</li>
-            <li><span id="@(ViewBag.MenuItem == "Top" ? "parentselitem" : "")">Top</span>
+            <li class="@(ViewBag.MenuItem == "ByCountry" ? "selitem" : "")">@Html.ActionLink("By Country", "ListByCountry", "Campaigns", new { style = "" })</li>
+            <li class="@(ViewBag.MenuItem == "US" ? "selitem" : "")">@Html.ActionLink("US", "List2", "Campaigns", new { country = "US" }, null)</li>
+            <li id="MenuCPM" class="@(ViewBag.MenuItem == "CPM" ? "selitem" : "")">@Html.ActionLink("CPM", "List2", "Campaigns", new { search = "CPM" }, null)</li>
+            <li id="MenuAll" class="@(ViewBag.MenuItem == "All" ? "selitem" : "")">@Html.ActionLink("All", "List2", "Campaigns")</li>
+            <li><span class="@(ViewBag.ParentMenuItem == "Top" ? "parentselitem" : "")">Top</span>
                 <ul>
-                    <li>@Html.ActionLink("Revenue", "Top", "Campaigns", new { by = "Revenue" }, null)</li>
-                    <li>@Html.ActionLink("Cost", "Top", "Campaigns", new { by = "Cost" }, null)</li>
-                    <li>@Html.ActionLink("EPC", "Top", "Campaigns", new { by = "EPC" }, null)</li>
+                    <li class="@(ViewBag.MenuItem == "TopRevenue" ? "selitem" : "")">@Html.ActionLink("Revenue", "Top", "Campaigns", new { by = "Revenue" }, null)</li>
+                    <li class="@(ViewBag.MenuItem == "TopCost" ? "selitem" : "")">@Html.ActionLink("Cost", "Top", "Campaigns", new { by = "Cost" }, null)</li>
+                    <li class="@(ViewBag.MenuItem == "TopEPC" ? "selitem" : "")">@Html.ActionLink("EPC", "Top", "Campaigns", new { by = "EPC" }, null)</li>
                 </ul>
             </li>
             @if (ViewBag.NoSearch == null || !ViewBag.NoSearch)
