--- a/1/EomTool/EomToolWeb/Views/Campaigns/Items.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Items.cshtml
@@ -34,10 +34,16 @@
                             }
                         });
                     },
-                    update: {
-                        url: "@Url.Action("Edit2", "Campaigns")",
-                        type: "POST"
-                    }
+                    update: function(options) {
+                        $.ajax( {
+                            type: "POST",
+                            url: "@Url.Action("Edit2", "Campaigns")",
+                            data: options.data,
+                            success: function(result) {
+                                options.success(result);
+                            }
+                        });
+                    },
                 },
                 pageSize: 20,
                 schema: {
