--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
@@ -55,7 +55,7 @@
             <dd>${PayableAction}</dd>
             <dt>Traffic Type:</dt>
             <dd>${TrafficTypes}</dd>
-            <dt>Preview Link:</dt>
+            <dt>Link:</dt>
             <dd><a href="${Link}" target="_blank">${Link}</a></dd>
             <dt>Payout:</dt>
             <dd>${CostCurrency}${Cost}</dd>
