--- a/1/EomTool/EomToolWeb/Views/Campaigns/Filter.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Filter.cshtml
@@ -64,7 +64,7 @@
         var data = listView.dataSource.view();
         var selected = $.map(listView.select(), function(item) {
             var d = data[$(item).index()];
-            return '<b>' + d.Name + '</b><br />' + d.Description + '<br />Action: ' + d.PayableAction + '<br />Traffic: ' + d.TrafficTypes + '<br />Link: <a href="' + d.Link + '">' + d.Link + '</a><br />Payout: ' + d.CostCurrency + d.Cost + '<br />';
+            return '<b>' + d.Name + '</b><br />' + d.Description + '<br />Payable Action: ' + d.PayableAction + '<br />Traffic Type: ' + d.TrafficTypes + '<br />Link: <a href="' + d.Link + '">' + d.Link + '</a><br />Payout: ' + d.CostCurrency + d.Cost + '<br />';
         });
         if (selected.length > 0)
             afterSelectedText = "Campaign text copied";
