--- a/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_LayoutCampaignWiki.cshtml
@@ -13,6 +13,7 @@
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.js")
     @Styles.Render("~/Scripts/kendo/styles/kendo.common.min.css")
     @Styles.Render("~/Scripts/kendo/styles/kendo.default.min.css")
+    @Styles.Render("~/Content/KendoSkin.css")
     @Scripts.Render("~/Scripts/kendo/2012.2.710/kendo.web.min.js")
     @Scripts.Render("~/bundles/templates")
     @Scripts.Render("~/Scripts/jquery.zclip.min.js")
