--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <td class="fieldName">Important Details:</td>
-                <td><input type="text" data-bind="value:ImportantDetailsAsString" name="ImportantDetails" /></td>
+                <td><input type="text" data-bind="value:ImportantDetails" name="ImportantDetails" /></td>
             </tr>
             <tr>
                 <td class="fieldName">Campaign Budget:</td>
@@ -62,7 +62,7 @@
             <dt>Restrictions:</dt>
             <dd style="overflow: auto">${Restrictions}</dd>
             <dt>Details:</dt>
-            <dd style="overflow: auto">${ImportantDetailsAsString}</dd>
+            <dd style="overflow: auto">${ImportantDetails}</dd>
             <dt>Budget:</dt>
             <dd>${Budget}</dd>
             <dt>Payout to DA:</dt>
