--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -18,7 +18,7 @@ Payout: @Model.CostCurrency@Model.Cost
 Payout to Direct Agents: @Model.RevenueCurrency@Model.Revenue
 <br />
 <b>Important Details:</b>
-@if (Model.ImportantDetails != null) { <br />@Model.ImportantDetails }
+@if (Model.ImportantDetailsMvcHtmlString != null) { <br />@Model.ImportantDetailsMvcHtmlString }
 <br />
 Campaign Cap: @Model.CampaignCap
 <br />
